testsuite/tests/linear/should_fail/LinearNoExt.stderr

LinearNoExt.hs:3:14: error: [GHC-31574]
    Illegal use of linear functions
    Suggested fix:
      Perhaps you intended to use the ‘LinearTypes’ extension
